Bug 484475 - Failed to contact server: Error transferring https://.../api/v1/accounts/.../featured_tags - server replied: . Please check your settings.
Summary: Failed to contact server: Error transferring https://.../api/v1/accounts/.../...
Status: RESOLVED FIXED
Alias: None
Product: Tokodon
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified All
: NOR minor
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
: 484474 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-03-25 20:36 UTC by tbqdrn
Modified: 2025-01-28 10:09 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 24.05.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description tbqdrn 2024-03-25 20:36:57 UTC
SUMMARY
Some alternative fediverse software like e.g. Akkoma does not implement Mastodons featured_tags API methods.
See https://docs.joinmastodon.org/methods/featured_tags/ and https://docs.akkoma.dev/stable-docs/development/API/differences_in_mastoapi_responses/#featured-tags

Because of that, visiting a profile when connected to an Akkoma instance shows this ugly error message at the top:

Failed to contact server: Error transferring https://.../api/v1/accounts/.../featured_tags - server replied: . Please check your settings.

Visiting the specified URL in a browser gets me a {"error":"Not implemented"} JSON response, so I would suggest to silently fail instead of showing this error every time.

STEPS TO REPRODUCE
1. Connect Tokodon with an account hosted on any Akkoma instance
2. Visit a profile

OBSERVED RESULT
See error message at the top

EXPECTED RESULT
Silently fail

SOFTWARE/OS VERSIONS
OS: Arch Linux
KDE Plasma Version: 6.0.2
KDE Frameworks Version: 6.0.0
Qt Version: 6.6.2
Comment 1 tbqdrn 2024-03-25 20:38:22 UTC
*** Bug 484474 has been marked as a duplicate of this bug. ***
Comment 2 Joshua Goins 2024-03-26 12:23:22 UTC
Thanks for reporting as well as the response you get. I'll look into stopping the error (or possibly hiding the menu all together, if we can detect it)
Comment 3 Joshua Goins 2024-07-06 16:18:46 UTC
Git commit 5236b6afc7aca5043b3fdc464792ee0e42102720 by Joshua Goins.
Committed on 06/07/2024 at 16:11.
Pushed by redstrate into branch 'master'.

Silently fail when 404'ing on featured tags

Some server software like Akkoma/Pleroma don't implement this endpoint,
annoying users of these servers. Instead of violently warning that we
404'd, just silently fail. This is OK as the code will fall back to not
showing any tags.

M  +24   -15   src/account/featuredtagsmodel.cpp

https://invent.kde.org/network/tokodon/-/commit/5236b6afc7aca5043b3fdc464792ee0e42102720
Comment 4 Joshua Goins 2024-07-06 16:26:38 UTC
Git commit 578e75caf8971cd0b1e2f739e5a7a5069de1a2c2 by Joshua Goins.
Committed on 06/07/2024 at 16:19.
Pushed by redstrate into branch 'release/24.05'.

Silently fail when 404'ing on featured tags

Some server software like Akkoma/Pleroma don't implement this endpoint,
annoying users of these servers. Instead of violently warning that we
404'd, just silently fail. This is OK as the code will fall back to not
showing any tags.


(cherry picked from commit 5236b6afc7aca5043b3fdc464792ee0e42102720)

Co-authored-by: Joshua Goins <josh@redstrate.com>

M  +24   -15   src/account/featuredtagsmodel.cpp

https://invent.kde.org/network/tokodon/-/commit/578e75caf8971cd0b1e2f739e5a7a5069de1a2c2
Comment 5 Ulf Bartholomäus 2025-01-28 10:09:49 UTC
Tokodon from openSUSE Tumbleweed

Tokodon: 24.12.1
openSUSE Tumbleweed (Wayland)
KDE Frameworks: 6.10.0
Qt: 6.8.1 wird verwendet und gebaut wurde mit 6.8.1
Build ABI: x86_64-little_endian-lp64
Kernel: linux 6.13.0-1-default

Error on the top line of the startpage:
"Server konnte nicht kontaktiert werden: Error transferring https://troet.cafe/api/v1/notifications/unread_count - server replied: . Bitte überprüfen Sie Ihre Einstellungen."

So same as reported in this bug. But with new version again.