Silently fail when 404'ing on featured tags

Some server software like Akkoma/Pleroma don't implement this endpoint,
annoying users of these servers. Instead of violently warning that we
404'd, just silently fail. This is OK as the code will fall back to not
showing any tags.

BUG: 484475